--- a/aboutme.html
+++ b/aboutme.html
@@ -7,10 +7,10 @@
     </head>
     <body>
     <div class="Navbar">
-      <a href="#index.html">Home</a>
-      <a href="#aboutme.html">About Me</a>
-      <a href="#Feature.html">Fearure Page</a>
-      <a href="#projects.html">Projects</a>
+      <a href="index.html">Home</a>
+      <a href="aboutme.html">About Me</a>
+      <a href="featurepage.html">Fearure Page</a>
+      <a href="projects.html">Projects</a>
      </div>
      <div id="about-content">
        <div class="my-picture">
